--- a/front/package.json
+++ b/front/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.10.0",
+    "cloudinary": "^2.7.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
