--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "cloudinary": "^2.7.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
