--- a/front/package.json
+++ b/front/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
+    "busboy": "^1.6.0",
     "cloudinary": "^2.7.0",
     "next": "15.3.4",
     "next-cloudinary": "^6.16.0",
+    "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "resend": "^4.7.0",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
